# wikiMD

./: README.md  pyproject.toml  setup.cfg
wikiMD/: NOTICE  setup.cfg
wikiMD/src/package/: wikiMD.py
wikiMD/src/wikiMD/: __init__.py  __main__.py  script.py  wikiMD.py
