[tool.poetry]
name = "wikiMD"
version = "1.0.0"
description = "Turn Wikipedia in markmap friendly markdown"
authors = ["John Capobianco <ptcapo@gmail.com>"]
packages = [{ include = "wikiMD", from = "src"}]

[tool.poetry.scripts]
wikimd = 'wikiMD.script:run'

[tool.poetry.dependencies]
python = "^3.9"
wikipedia = "^1.4.0"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"