[metadata]
name = wikiMD
version = 0.0.6
author = John Capobianco
author_email = ptcapo@gmail.com
description = Provide a valid Wikipedia Page and get back a markmap friendly markdown file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/automateyournetwork/wikiMD
project_urls =
    Bug Tracker = https://github.com/automateyournetwork/wikiMD/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True