[metadata]
name = wikiMD-automateyournetwork
version = 0.0.1
author = John Capobianco
author_email = ptcapo@gmail.com
description = Provide a valid Wikipedia Page and get back a markmap friendly markdown file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/automateyournetwork/wikiMD
project_urls =
    Bug Tracker = https://github.com/automateyournetwork/wikiMD/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True